docs/versioned_docs/version-3.9.9/guides/keyboard.mdx
---
title: Keyboard Handling
description: How TrueSheet handles keyboard visibility.
keywords: [bottom sheet keyboard, bottom sheet input, bottom sheet text input]
---

import keyboard from './assets/keyboard.gif'

TrueSheet handles keyboard visibility natively on both iOS and Android. When a `TextInput` inside the sheet is focused, the sheet automatically adjusts to keep the input visible above the keyboard.

<img alt="keyboard" src={keyboard} width="300"/>

## How?

The keyboard handling is built into the native implementation:

- **iOS**: Uses `UISheetPresentationController`'s built-in keyboard avoidance
- **Android**: Tracks keyboard height via `WindowInsetsAnimationCompat` and reconfigures sheet detents in real-time

No additional configuration is required. Simply add your `TextInput` components inside the sheet:

```tsx
const App = () => {
  return (
    <TrueSheet ref={sheet} detents={['auto']}>
      <View style={{ padding: 16 }}>
        <TextInput
          placeholder="Type something..."
          style={{ borderWidth: 1, borderColor: '#ccc', padding: 12, borderRadius: 8 }}
        />
      </View>
    </TrueSheet>
  )
}
```

## Scrollable + Keyboard

When using [`scrollable`](/reference/configuration#scrollable) with `TextInput` inside a `ScrollView`, the sheet auto-scrolls to keep the focused input visible above the keyboard. Use `keyboardScrollOffset` in [`scrollableOptions`](/reference/configuration#scrollableoptions) to add extra spacing between the input and the keyboard:

```tsx
<TrueSheet scrollable scrollableOptions={{ keyboardScrollOffset: 16 }}>
  <ScrollView>
    <TextInput placeholder="Type something..." />
  </ScrollView>
</TrueSheet>
```

## Footer Behavior

When using a [`footer`](/reference/configuration#footer) component, it automatically repositions above the keyboard, staying visible while the user types.

## Autofocus Limitation

Avoid using `autoFocus` on `TextInput` components inside the sheet. The keyboard may appear before the sheet has finished presenting, causing layout issues.

Instead, focus the input programmatically after the sheet has presented:

```tsx {4,7}
const inputRef = useRef<TextInput>(null)

const handlePresent = () => {
  inputRef.current?.focus()
}

<TrueSheet onDidPresent={handlePresent}>
  <TextInput ref={inputRef} placeholder="Type something..." />
</TrueSheet>
```
